# PageSwarm

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/: AGENTS.md  copilot-instructions.md
.github/instructions/: python.instructions.md
server/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
server/api/endpoints/: __init__.py  health.py
server/api/v1/: api.py
server/api/v1/endpoints/: documents.py
server/app/: __init__.py  main.py
server/app/api/endpoints/: health.py
server/app/api/v1/: api.py
server/app/api/v1/endpoints/: documents.py  health.py
server/app/core/: __init__.py  logging.py  middleware.py
server/app/schemas/: documents.py  health.py
server/core/: logging.py  middleware.py
server/pageswarm_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/schemas/: documents.py
